# handler/listOpenings.go
@@ -8,6 +8,16 @@ import (
 	"github.com/glauberratti/gopportunities/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary Show openings
+// @Description Show all jobs opening
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Success 200 {object} ListOpeningsResponse
+// @Failure 404 {object} ErrorResponse
+// @Router /openings [get]
 func ListOpeningsHandler(ctx *gin.Context) {
 	openings := []schemas.Opening{}
 
